--- a/templates/reviewer_mandates_list.html
+++ b/templates/reviewer_mandates_list.html
@@ -57,7 +57,12 @@
     <div class="panel-body">
         {% if filter is False %}
             <div class="row" style="padding-bottom: 5px;">
-	            <div class="col-md-12 text-right">
+                <div class="col-md-6 text-left">
+                    <a href="{% url 'export_mandates_for_entity_pdf' year %}" class="btn btn-default">
+                        {% trans 'desc_lnk_export_mandates_pdf'%}
+                    </a>
+                </div>
+	            <div class="col-md-6 text-right">
                     <form action=" {% url 'reviewer_mandates_list' %} " method="GET">
                     {{ form.academic_year }}
                     <button type="submit" class="btn btn-default btn-xs" title="{% trans 'apply'%}" id="bt_filter">
