--- a/templates/manager_home.html
+++ b/templates/manager_home.html
@@ -68,10 +68,16 @@
         </div>
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-11">
+            <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'export_mandates_pdf' %}" id="lnk_export_mandates">
                     {% trans 'export_mandates' %}</a></h4>
                 <p>{% trans 'desc_lnk_export_mandates_pdf' %}</p>
+            </div>
+            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-md-5">
+                <h4 class="media-heading"><a href="{% url 'export_declined_mandates_pdf' %}" id="lnk_export_declined_mandates">
+                    {% trans 'export_declined_mandates' %}</a></h4>
+                <p>{% trans 'desc_lnk_export_declined_mandates_pdf' %}</p>
             </div>
         </div>
         <div class="row" style="padding-top: 10px;">
