OSIS-3288 : Fix missing icons

--- a/templates/manager_home.html
+++ b/templates/manager_home.html
@@ -40,7 +40,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fa fa-dashboard" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-md-1"><i class="fas fa-tachometer-alt" style="font-size: 400%; color: #6699FF;"></i></div>
             <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'mandates_list' %}" id="lnk_dashboard">{% trans 'dashboard' %}</a></h4>
                 <p>{% trans 'desc_lnk_dashboard' %}</p>
@@ -89,12 +89,12 @@
             </div>
         </div>
         <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fa fa-envelope-o" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-md-1"><i class="far fa-envelope" style="font-size: 400%; color: #6699FF;"></i></div>
             <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'messages_history' %}" id="lnk_emails">{% trans 'emails' %}</a></h4>
                 <p>{% trans 'desc_lnk_emails' %}</p>
             </div>
-            <div class="col-md-1"><i class="fa fa-gears" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-md-1"><i class="fas fa-cogs" style="font-size: 400%; color: #6699FF;"></i></div>
             <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'settings_edit' %}" id="lnk_settings">{% trans 'settings' %}</a></h4>
                 <p>{% trans 'desc_lnk_settings' %}</p>
