--- a/templates/manager_replace_reviewer.html
+++ b/templates/manager_replace_reviewer.html
@@ -73,7 +73,7 @@
 				onclick="return confirm('{% trans 'confirm_reviewer_replacement' %}')">
 			<span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
 			<a class="btn btn-default" id="lnk_upload_cancel" href="{% url 'reviewers_list' %}">
-				<span class="glyphicon glyphicon-cancel" aria-hidden="true"></span> {% trans 'cancel'%}</a>
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans 'cancel'%}</a>
     	</form>
     </div>
 </div>
