--- a/templates/mandate_form.html
+++ b/templates/mandate_form.html
@@ -134,7 +134,7 @@
             <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
             <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_mandate_save"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
             <a class="btn btn-default" id="lnk_mandate_cancel" href="{% url 'mandates_list' %}">
-                <span class="glyphicon glyphicon-cancel" aria-hidden="true"></span> {% trans 'cancel'%}</a>
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans 'cancel'%}</a>
         </form>
     </div>
 </div>
