--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -44,7 +44,7 @@
                 <form action=" {% url 'mandates_list' %} " method="GET">
                 {{ form.academic_year }}
                 <button type="submit" class="btn btn-default btn-xs" title="{% trans 'apply'%}" id="bt_filter">
-                <span class="glyphicon glyphicon-apply" aria-hidden="true"></span> {% trans 'apply'%}</button>
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> {% trans 'apply'%}</button>
                 </form>
             </div>
         </div>
@@ -105,13 +105,13 @@
                 {% for review in mandate.review_set.all|dictsort:"changed" %}
                     {% if review.status == review_status.DONE %}
                         {% if not review.reviewer %}
-                            <i id="rev" class="fa fa-battery-1" style="font-size: 100%;
+                            <i id="rev" class="fas fa-battery-quarter" style="font-size: 100%;
                         {% elif "RESEARCH" in review.reviewer.role %}
-                            <i class="fa fa-battery-2" style="font-size: 100%;
+                            <i class="fas fa-battery-half" style="font-size: 100%;
                         {% elif "SUPERVISION" in review.reviewer.role %}
-                            <i class="fa fa-battery-3" style="font-size: 100%;
+                            <i class="fas fa-battery-three-quarters" style="font-size: 100%;
                         {% elif "VICE_RECTOR" in review.reviewer.role %}
-                            <i class="fa fa-battery-4" style="font-size: 100%;
+                            <i class="fas fa-battery-full" style="font-size: 100%;
                         {% endif %}
                         {% if review.advice == "FAVORABLE" %}
                              color: #79C84F;"
