--- a/templates/reviewer_add_reviewer.html
+++ b/templates/reviewer_add_reviewer.html
@@ -60,7 +60,7 @@
     onclick="return confirm('{% trans 'confirm_reviewer_delegation' %}')">
     <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
     <a class="btn btn-default" id="lnk_upload_cancel" href="{% url 'reviewer_delegation' %}">
-    <span class="glyphicon glyphicon-cancel" aria-hidden="true"></span> {% trans 'cancel'%}</a>
+    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans 'cancel'%}</a>
     </form>
     </div>
 </div>
