--- a/templates/settings.html
+++ b/templates/settings.html
@@ -103,7 +103,7 @@
         <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_settings_save">
             <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
             <a class="btn btn-default" id="lnk_cancel" href="{% url 'manager_home' %}">
-            <span class="glyphicon glyphicon-cancel" aria-hidden="true"></span> {% trans 'cancel'%}</a>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans 'cancel'%}</a>
         </form>
     </div>
 </div>
