--- a/templates/tutoring_learning_unit_year.html
+++ b/templates/tutoring_learning_unit_year.html
@@ -115,7 +115,7 @@
         <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_save_tutoring_learning_unit">
         <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
         <a class="btn btn-default" id="lnk_cancel" href="{% url 'mandate_learning_units' %}">
-        <span class="glyphicon glyphicon-cancel" aria-hidden="true"></span> {% trans 'cancel'%}</a>
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {% trans 'cancel'%}</a>
         <input type="hidden" name="mandate_id" value="{{ mandate_id }}">
     </form>
     </div>
