Glyphicon to FA

--- a/templates/assistant_form_part1.html
+++ b/templates/assistant_form_part1.html
@@ -114,7 +114,7 @@
             </div>
         {% endif %}
         <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_pstform_part1_save">
-            <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}
+            <span class="far fa-save" aria-hidden="true"></span> {% trans 'save'%}
         </button>
 		<input type="hidden" name="mandate_id" value="{{ mandate.id }}">
     </form>
