--- a/templates/assistant_form_part5.html
+++ b/templates/assistant_form_part5.html
@@ -137,7 +137,7 @@
             <font class="error">{{ form.formations.errors }}</font>
         </div>
         <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_pstform_part5_save">
-            <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
+            <span class="far fa-save" aria-hidden="true"></span> {% trans 'save'%}</button>
         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
         </form>
     </div>
