--- a/templates/assistants.html
+++ b/templates/assistants.html
@@ -61,11 +61,11 @@
                 <div class="col-md-2">
                     <br>
                     <button type="submit" id="bt_submit_organization_search" class="btn btn-primary" role="button"
-                            title="{% trans 'search_for_an_organization' %}"><span class="glyphicon glyphicon-search"
+                            title="{% trans 'search_for_an_organization' %}"><span class="fas fa-search"
                                                                                    aria-hidden="true"></span></button>
 
                     <a href="{% url 'organization_create' %}" id="lnk_organization_create" class="btn btn-default"
-                       role="button" title="{% trans 'create_an_organization'%}"><span class="glyphicon glyphicon-plus"
+                       role="button" title="{% trans 'create_an_organization'%}"><span class="fas fa-plus"
                                                                                        aria-hidden="true"></span></a>
                 </div>
             </div>
