--- a/templates/load_mandates.html
+++ b/templates/load_mandates.html
@@ -61,7 +61,7 @@
             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pnl_upload_mandates_modal"
                     id="btn_upload_mandates_modal"
                     title="{% trans 'tooltip_select_excel_file_to_inject_mandates' %}">
-                <span class="glyphicon glyphicon-upload" aria-hidden="true"></span> {% trans 'inject_xls_file' %}
+                <span class="fas fa-arrow-circle-up" aria-hidden="true"></span> {% trans 'inject_xls_file' %}
             </button>
 
 	</div>
