--- a/templates/mandate_learning_unit_list.html
+++ b/templates/mandate_learning_unit_list.html
@@ -73,13 +73,13 @@
                 <td><a href="{% url 'tutoring_learning_unit_edit' learning_unit.id %}">
                     <button type="button" class="btn btn-link btn-lg" title="{% trans 'edit'%}"
                             id="bt_learning_unit_edit">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                    <span class="far fa-edit" aria-hidden="true"></span>
                     </button>{% trans 'edit'%}</a></td>
                 <td><a href="{% url 'tutoring_learning_unit_delete' learning_unit.id %}"
                        onclick="return confirm('{% trans 'confirm_removal' %}')">
                     <button type="button" class="btn btn-link btn-lg" title="{% trans 'delete'%}"
                             id="bt_learning_unit_delete">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    <span class="fas fa-times" aria-hidden="true"></span>
                     </button>{% trans 'delete'%}</a></td>
                 </tr>
             {% endfor %}
@@ -88,7 +88,7 @@
         </div>
         <a href="{% url 'tutoring_learning_unit_add' %}">
             <button type="button" class="btn btn-link btn-lg" title="{% trans 'add'%}" id="bt_reviewer_add">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <span class="fas fa-plus" aria-hidden="true"></span>
             </button>{% trans 'add_tutoring_learning_unit' %}</a>
         <div class="panel-default">
   			<div class="panel-heading">
@@ -105,7 +105,7 @@
                     <a class="btn btn-default btn-danger btn-sm" id="btn_delete_file" style="margin-right: 5px;"
                        title="{% trans 'delete'%}"
                        onclick="location.href='{% url 'assistant_file_delete' file.id 'mandate_learning_units' %}';">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true" id="spn_delete_file"></span>
+                    <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
                         {% trans 'delete' %}</a>
                 </div>
                 <div class="col-md-10" id="hdn_filename" style="text-align: left">
@@ -116,7 +116,7 @@
 		<div class="form-group" style="padding-top: 15px;">
 			<a class="btn btn-default" data-toggle="modal" data-target="#pnl_upload_documents"
                id="btn_add_file" style="margin-right: 5px;" title="{% trans 'add_file'%}">
-                <span class="glyphicon glyphicon-upload" aria-hidden="true" id="spn_add_file"></span>
+                <span class="fas fa-arrow-circle-up" aria-hidden="true" id="spn_add_file"></span>
                 {% trans 'upload' %}</a>
 		</div>
             <input type="hidden" value="{{mandate_id | default_if_none:''}}" id="hdn_current_mandate_id"
