--- a/templates/phd_supervisor_assistants_list.html
+++ b/templates/phd_supervisor_assistants_list.html
@@ -90,7 +90,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'edit'%}">
-                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                            <span class="far fa-edit" aria-hidden="true"></span>
                             {% trans 'edit'%}
                         </button>
                     </form>
@@ -101,13 +101,13 @@
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'view'%}">
-                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                            <span class="far fa-eye" aria-hidden="true"></span>
                             {% trans 'view'%}
                         </button>
                     </form>
                 </td>
             {% else %}
-                <td align="center"><span class="glyphicon glyphicon-ban-circle" aria-hidden="true"></span></td>
+                <td align="center"><span class="fas fa-ban" aria-hidden="true"></span></td>
             {% endif %}
             </tr>
         {% endfor %}
