--- a/templates/reviewer_structures_list.html
+++ b/templates/reviewer_structures_list.html
@@ -72,7 +72,7 @@
  		            {% csrf_token %}
                     <input type="hidden" name="entity" value="{{ entity.id }}">
                     <button type="submit" class="btn btn-link" title="{% trans 'edit'%}">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {% trans 'add'%}
+                        <span class="fas fa-plus" aria-hidden="true"></span> {% trans 'add'%}
                     </button></form>
                 {% endif %}
                 </td>
