--- a/templates/reviewers_list.html
+++ b/templates/reviewers_list.html
@@ -67,7 +67,7 @@
         </div>
         <a href="{% url 'reviewer_add' %}">
             <button type="button" class="btn btn-link btn-lg" title="{% trans 'add'%}" id="bt_reviewer_add">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <span class="fas fa-plus" aria-hidden="true"></span>
             </button>{% trans 'add_reviewer' %}</a>
         </form>
     </div>
