--- a/templates/assistant_form_part4.html
+++ b/templates/assistant_form_part4.html
@@ -91,7 +91,7 @@
                     <a class="btn btn-default btn-danger btn-sm" id="btn_delete_file" style="margin-right: 5px;"
                        title="{% trans 'delete'%}"
                        onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part4_edit' %}';">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true" id="spn_delete_file"></span>
+                    <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
                         {% trans 'delete_file' %}</a>
                 </div>
                 <div class="col-md-10" id="hdn_filename" style="text-align: left">
@@ -102,7 +102,7 @@
         <div class="row" style="padding-top: 15px; padding-left: 15px;">
             <a class="btn btn-default" data-toggle="modal" data-target="#pnl_upload_documents"
                id="btn_add_file" style="margin-right: 5px;" title="{% trans 'add_file'%}">
-                <span class="glyphicon glyphicon-upload" aria-hidden="true" id="spn_add_file"></span>
+                <span class="fas fa-arrow-circle-up" aria-hidden="true" id="spn_add_file"></span>
                 {% trans 'upload' %}</a>
         </div>
         <hr>
@@ -110,7 +110,7 @@
 		   name="mandate_id" title="mandate_id" >
         <input type="hidden" value="{{ document_type }}" id="hdn_description" name="description" title="description">
         <button type="submit" class="btn btn-primary" title="{% trans 'save'%}" id="bt_pstform_part3_save">
-     	<span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}</button>
+     	<span class="far fa-save" aria-hidden="true"></span> {% trans 'save'%}</button>
     	</form>
 	</div>
 </div>
