--- a/templates/assistant_form_part6.html
+++ b/templates/assistant_form_part6.html
@@ -103,12 +103,12 @@
         <div class="btn-toolbar">
             <button type="submit" class="btn btn-primary"
                     title="{% trans 'save'%}" id="bt_pstform_part6_save">
-                    <span class="glyphicon glyphicon-save" aria-hidden="true"></span> {% trans 'save'%}
+                    <span class="far fa-save" aria-hidden="true"></span> {% trans 'save'%}
             </button>
             <button type="submit" class="btn btn-success" title="{% trans 'validate_and_submit'%}"
                     id="bt_pstform_validate_and_submit" name="validate_and_submit"
                     onclick="return confirm('{% trans 'confirm_validation' %}')">
-                    <span class="glyphicon glyphicon-saved" aria-hidden="true">
+                    <span class="fas fa-check" aria-hidden="true">
                     </span> {% trans 'validate_and_submit'%}
             </button>
         </div>
