--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -44,7 +44,7 @@
                 <form action=" {% url 'mandates_list' %} " method="GET">
                 {{ form.academic_year }}
                 <button type="submit" class="btn btn-default btn-xs" title="{% trans 'apply'%}" id="bt_filter">
-                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> {% trans 'apply'%}</button>
+                <span class="fas fa-check" aria-hidden="true"></span> {% trans 'apply'%}</button>
                 </form>
             </div>
         </div>
@@ -74,7 +74,7 @@
                     <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                     <a href="mailto:{{ mandate.assistant.person.email }}">{{ mandate.assistant }}</a>
                     <button type="submit" class="btn btn-link" title="{% trans 'edit'%}">
-                        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> {% trans 'edit'%}
+                        <span class="far fa-edit" aria-hidden="true"></span> {% trans 'edit'%}
                     </button></form>
                 </td>
                 <td><ul>
